<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">
           
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/previous"
                android:id="@+id/previous"/>
            <EditText
                android:id="@+id/bmi_height"
                android:inputType="number"
                android:hint="@string/height"
                android:drawableStart="@drawable/ic_height"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:layout_width="285dp" />

            <EditText
                android:id="@+id/bmi_weight"
                android:inputType="number"
                android:hint="@string/weight"
                android:drawableStart="@drawable/ic_weight"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_width="285dp" />

            <Button

                android:text="@string/calculate"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:id="@+id/bmi_calculate_btn"
                android:layout_width="285dp" />

            <TextView
                android:layout_marginTop="55dp"
                android:text="@string/your_bmi"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name_bmi"
                android:textSize="30sp" />

            <TextView
                android:layout_marginTop="55dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bmi_Result"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>