<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/weight_item_date"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:hint="@string/date"/>

        <TextView
            android:id="@+id/weight_item_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:hint="@string/status" />

    </LinearLayout>

    <TextView
        android:id="@+id/weight_item_weight"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:hint="@string/weight"/>

</LinearLayout>